fix/structure_modification